# website

./: .gitignore  CMakeLists.txt  Doxyfile.in  Doxygen_index.md  README.md  benchmarks.md  cards-python.md  changelog.md  conf.in.py  event-modifiers.md  event.md  index.md  install.md  integrators.md  output-formats.md  processes-comparisons.md  processes-devel.md  processes-factorised.md  processes-lpair.md  processes-madgraph.md  processes.md  random-generators.md  raw-modules.md  requirements.txt  structure-functions.md  usage.md
.github/workflows/: doc.yml
_static/: bibliography.bib  hacks.css
